fixed cart position on mobile screens

--- a/client/src/pages/Contact/style.scss
+++ b/client/src/pages/Contact/style.scss
@@ -11,12 +11,12 @@
   grid-template-rows: 100px auto;
   column-gap: 10px;
 
-  .shoppingCart-container {
-    position: absolute;
-    width: 100%;
-    top: 15%;
-    left: 0;
-  }
+  // .shoppingCart-container {
+  //   position: absolute;
+  //   width: 100%;
+  //   top: 15%;
+  //   left: 0;
+  // }
 
   .primary-heading-contact {
     grid-column: 1 / 3;
