--- a/client/src/pages/GeneralProducts/style.scss
+++ b/client/src/pages/GeneralProducts/style.scss
@@ -253,6 +253,10 @@
     font-size: 14px !important;
   }
 
+  .shoppingCart-container {
+    top: 20%;
+  }
+
   .more-products__heading {
     font-size: 26px;
   }
